style(speedup): no padding for last input, avoid scrollbar

--- a/src/ui/components/TransactionCancelAndSpeedUp/style.less
+++ b/src/ui/components/TransactionCancelAndSpeedUp/style.less
@@ -110,6 +110,10 @@
             }
     
         }
+
+        .field:last-child {
+            padding-bottom: 0;
+        }
     }
 }
 .cancel-speedup-popover_wrapper.expanded {
